@@ -99,7 +99,6 @@
 #define TCP_WINDOW_SIZE "Window Size\n\nThe number of data octets beginning with the one indicated in the acknowledgment field which the sender of this segment is willing to accept.\n\n[RFC793]"
 #define TCP_CHECKSUM "Checksum\n\nThe checksum field is the 16 bit one's complement of the one's complement sum of all 16 bit words in the header and text. If a segment contains an odd number of header and text octets to be checksummed, the last octet is padded on the right with zeros to form a 16 bit word for checksum purposes. The pad is not transmitted as part of the segment. While computing the checksum, the checksum field itself is replaced with zeros.\n\n[RFC793]"
 #define TCP_URGENT_POINTER "Urgent Pointer\n\nThis field communicates the current value of the urgent pointer as a positive offset from the sequence number in this segment. The urgent pointer points to the sequence number of the octet following the urgent data. This field is only be interpreted in segments with the URG control bit set.\n\n[RFC793]"
-#define TCP_OPTION_NOP "No Operation (NOP)\n\nThis option code may be used between options, for example, to align the beginning of a subsequent option on a word boundary. There is no guarantee that senders will use this option, so receivers must be prepared to process options even if they do not begin on a word boundary.\n\n[RFC793]"
 #define TCP_OPTION_KIND "Option Kind\n\nThe kind of option.\n\n[RFC793]"
 #define TCP_OPTION_LENGTH "Option Length\n\nThe option-length counts the two octets of option-kind and option-length as well as the option-data octets.\n\n[RFC793]"
 #define TCP_OPTION_DATA "Option Data\n\nThe data of the option. It depends of the option kind.\n\n[RFC793]"
